add tests for all services