@@ -5,13 +5,14 @@ import com.app.ecommerce.configuration.exception.constant.ExceptionMessages;
 import com.app.ecommerce.core.order.utils.OrderResponse;
 import com.app.ecommerce.core.order.utils.OrderStatus;
 import com.app.ecommerce.core.order.utils.OrdersResponse;
+import com.app.ecommerce.core.product.dto.OrderProductResponse;
 import com.app.ecommerce.core.user.User;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class OrderServiceImpl implements OrderService{
@@ -26,7 +27,7 @@ public class OrderServiceImpl implements OrderService{
     }
 
     @Override
-    public OrderResponse createOrder(User customer){
+    public OrdersResponse createOrder(User customer){
         if (orderRepository.existsByCustomerAndOrderStatus(customer, OrderStatus.PENDING)) {
             throw new SystemServiceException(ExceptionMessages.PENDING_ORDER_EXIST);
         }
@@ -36,22 +37,44 @@ public class OrderServiceImpl implements OrderService{
                 .createdAt(LocalDateTime.now())
                 .build();
         orderRepository.save(order);
-        return modelMapper.map(order, OrderResponse.class);
+        return modelMapper.map(order, OrdersResponse.class);
     }
 
     @Override
-    public void changeOrderStatus(User customer, Long orderId){
+    public OrdersResponse changeOrderStatus(User customer, Long orderId){
         Order order = orderRepository.findByIdAndCustomerAndOrderStatus(orderId, customer,OrderStatus.PENDING).orElseThrow(() ->
                 new SystemServiceException(ExceptionMessages.NOT_ALLOWED));
         order.setOrderStatus(OrderStatus.SHIPPED);
         orderRepository.save(order);
+        return modelMapper.map(order, OrdersResponse.class);
     }
 
     @Override
     public OrderResponse getOrder(User customer, Long orderId){
         Order order = orderRepository.findByIdAndCustomer(orderId, customer).orElseThrow(() ->
                 new SystemServiceException(ExceptionMessages.NOT_ALLOWED));
-        return modelMapper.map(order, OrderResponse.class);
+
+        return OrderResponse.builder()
+                .id(order.getId())
+                .orderStatus(order.getOrderStatus())
+                .createdAt(order.getCreatedAt())
+                .products(getOrderResponse(order))
+                .build();
+    }
+
+    private List<OrderProductResponse> getOrderResponse(Order order) {
+        List<OrderProductResponse> responses = new ArrayList<>();
+        if (order.getOrderItems() != null) {
+            order.getOrderItems().forEach(orderItem -> {
+                OrderProductResponse orderProductResponse = OrderProductResponse.builder()
+                        .productName(orderItem.getProduct().getName())
+                        .productPrice(orderItem.getProduct().getPrice())
+                        .quantity(orderItem.getQuantity())
+                        .build();
+                responses.add(orderProductResponse);
+            });
+        }
+        return responses;
     }
 
     @Override
@@ -59,6 +82,6 @@ public class OrderServiceImpl implements OrderService{
         return orderRepository.findAllByCustomer(customer)
                 .stream()
                 .map(order -> modelMapper.map(order, OrdersResponse.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
